added keys and metadata to pio output results file such that watcher can do processing

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Add any directories, files, or patterns you don't want to be tracked by version control
 
+./idea/
+
 # all input flops and scripts #
 ############
 generated_scripts/
