new main version, to be used only from now on. Power shell requirement for google instance is now variable which can be set.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
 # Add any directories, files, or patterns you don't want to be tracked by version control
 
 ./idea/
+.idea
+*.pyc
+johan-app2.py
+main_functions_2.py
 
 # all input flops and scripts #
 ############
 generated_scripts/
 !generated_scripts/solved-flops.log
+
 
 # OUTPUT FILES #
 ######################
